--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Donk's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -26,7 +27,7 @@
     <li>Preferred Foot: Right</li>
     <li>Position: Centre Back</li>
   </ul>
-<hr>
+  <hr>
   <h3>My Career</h3>
   <table cellspacing="20">
     <thead>
